--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,39 @@
+*{
+    border: 0;
+    margin: 0;
+    padding: 0;
+}
+
 body {
+  font-family: "Montserrat", sans-serif;
+  background-color: #180a0a;
+  font-style: normal;
   width: 100%;
+  color: white;
+}
+
+.logo{
+  width: 5rem;
+  height: 5rem;
+}
+
+.navi{
+    display: flex;
+    justify-content: space-around;
+}
+
+.navi > a{
+    text-decoration: none;
+    color: white;
+  align-self: center;
+}
+
+.header-wrapper{
+    padding: 0 2rem 0 2rem;
+    margin-top: 2rem;
+    background-color: #701a7558;
+}
+
+.icon-ed{
+    color: #f582a7;
 }
