Make final changes

--- a/src/style.css
+++ b/src/style.css
@@ -90,6 +90,7 @@ body {
   flex-direction: column;
   gap: 1rem;
   width: auto;
+  align-items: flex-end;
 }
 
 .lk-edit {
@@ -252,9 +253,13 @@ footer {
   bottom: 0;
   height: 4rem;
   width: 100%;
+  background-color: #701a7558;
+  margin-bottom: 0.5rem;
 }
 
 footer p {
-  padding: 1rem;
+  padding: 1.5rem;
+  font-size: 1.5rem;
+  text-align: center;
   border-top: #f582a7 1px;
 }
